Fix inline form vertical alignment

--- a/assets/scss/bootstrap/_form.scss
+++ b/assets/scss/bootstrap/_form.scss
@@ -55,16 +55,12 @@
   display: flex;
   flex-flow: row wrap;
 
-  label {
-    align-items: center;
-    display: flex;
-    justify-content: center;
+  .custom-file,
+  .custom-select {
+    width: auto;
   }
 
   .form-check {
-    align-items: center;
-    display: flex;
-    justify-content: center;
     margin-bottom: 0;
     width: auto;
   }
